# cfl

./: .gitignore  Cargo.toml  README
examples/: advanced.rs  basic.rs
src/: cli.rs  error.rs  lib.rs  main.rs  processor.rs
src/tests/: builder_test.rs  integration_test.rs  mod.rs  processor_test.rs
