[package]
name = "cfl"
version = "0.1.0"
edition = "2021"
description = "A library and CLI tool to copy file contents for LLM processing"
license = "MIT"

[[bin]]
name = "cfl"
path = "src/bin/cfl.rs"

[lib]
name = "cfl"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5", features = ["derive"] }
clipboard = "0.5.0"
glob = "0.3.1"
ignore = "0.4.23"
thiserror = "2.0.6"

[dev-dependencies]
tempfile = "3.14.0"